--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -2,12 +2,13 @@ name: "Main Workflow"
 
 on:
   push:
-    branches: 
+    branches:
       - master
-      - releases/* 
+      - releases/*
 
 jobs:
-  build:
+  build-dotnet:
+    name: Build dotnet
     runs-on: windows-latest
     steps:
       - name: Checkout
@@ -17,4 +18,14 @@ jobs:
         #run: docker build . --file Dockerfile --tag auycro/dotnet:$(date +%s)
       - name: Run the Docker image
         run: docker run --rm auycro/dotnet --version
-          
+  build-msbuild:
+    name: Build msbuild
+    runs-on: windows-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: Build the Docker image
+        run: docker build --file Dockerfile.msbuild --tag auycro/msbuild .
+        #run: docker build . --file Dockerfile --tag auycro/dotnet:$(date +%s)
+      - name: Run the Docker image
+        run: docker run --rm auycro/msbuild --version
