--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -7,17 +7,18 @@ on:
       - releases/*
 
 jobs:
-  build-dotnet:
-    name: Build dotnet
-    runs-on: windows-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-      - name: Build the Docker image
-        run: docker build . --file Dockerfile --tag auycro/dotnet
-        #run: docker build . --file Dockerfile --tag auycro/dotnet:$(date +%s)
-      - name: Run the Docker image
-        run: docker run --rm auycro/dotnet --version
+  #build-dotnet:
+  #  name: Build dotnet
+  #  runs-on: windows-latest
+  #  steps:
+  #    - name: Checkout
+  #      uses: actions/checkout@v2
+  #    - name: Build the Docker image
+  #      run: docker build . --file Dockerfile --tag auycro/dotnet
+  #      #run: docker build . --file Dockerfile --tag auycro/dotnet:$(date +%s)
+  #    - name: Run the Docker image
+  #      run: docker run --rm auycro/dotnet --version
+
   build-msbuild:
     name: Build msbuild
     runs-on: windows-latest
