--- a/Dockerfile.msbuild
+++ b/Dockerfile.msbuild
@@ -3,6 +3,6 @@ FROM mcr.microsoft.com/dotnet/framework/sdk:4.8
 WORKDIR /app
 
 COPY SampleApp/ .
-RUN nuget restore
+RUN nuget restore .
 RUN msbuild /p:Configuration=Release /p:OutputPath=C:\app\out\;
 ENTRYPOINT ["/app/out/ConsoleApp.exe"]
